pkg/kgateway/translator/gateway/testutils/inputs/http-with-header-modifier/manifests.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: gw
spec:
  gatewayClassName: kgateway
  listeners:
  - protocol: HTTP
    port: 8080
    name: http
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
spec:
  parentRefs:
  - name: gw
  hostnames:
  - "example.com"
  rules:
  - backendRefs:
    - name: example-svc
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /header
    backendRefs:
    - name: example-svc
      port: 8080
      filters:
      - type: RequestHeaderModifier
        requestHeaderModifier:
          set:
          - name: X-Backend-Header-Set-1
            value: header-set-1
          - name: X-Backend-Header-Set-2
            value: header-set-2
    filters:
    # taken from https://github.com/kubernetes-sigs/gateway-api/blob/main/conformance/tests/httproute-request-header-modifier.yaml
    - type: RequestHeaderModifier
      requestHeaderModifier:
        set:
        - name: X-Header-Set-1
          value: header-set-1
        - name: X-Header-Set-2
          value: header-set-2
        add:
        - name: X-Header-Add-1
          value: header-add-1
        - name: X-Header-Add-2
          value: header-add-2
        - name: X-Header-Add-3
          value: header-add-3
        remove:
        - X-Header-Remove-1
        - X-Header-Remove-2

  - matches:
    - path:
        type: PathPrefix
        value: /multiple-backends
    backendRefs:
    - name: example-svc
      port: 8080
      filters:
      - type: RequestHeaderModifier
        requestHeaderModifier:
          set:
          - name: X-Backend-Header-Set-1
            value: header-set-1
    - name: example-svc
      port: 8080
      filters:
      - type: RequestHeaderModifier
        requestHeaderModifier:
          set:
          - name: X-Backend-Header-Set-1
            value: header-set-2
---
apiVersion: v1
kind: Service
metadata:
  name: example-svc
spec:
  selector:
    app.kubernetes.io/name: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http-web-svc
